# tunesalon-ai-desktop

./: .gitignore  LICENSE  README.md  build_installer.sh  installer.nsi  package-lock.json  package.json  vite.config.ts
docs/: TEST_CHECKLIST.md
python/: convert_gguf_runner.py  desktop_config.yaml  gguf_server.py  requirements.txt  runtime_hook.py  start_server.py  tunesalon.spec
python/api/: config.py  main.py
python/api/routers/: __init__.py  chat.py  chat_sessions.py  library.py  settings.py  setup.py  system.py  train.py
python/api/schemas/: __init__.py  chat.py  library.py  settings.py  system.py  train.py
python/api/services/: __init__.py  chat_storage.py  huggingface.py
python/core/: __init__.py  environment.py  exporter.py  gguf_inference.py  gpu.py  inference.py  rag.py  trainer.py
src/: App.tsx  index.css  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: chat.ts  chat_sessions.ts  client.ts  library.ts  settings.ts  system.ts  train.ts
src/components/: LoadingScreen.tsx  SidecarBanner.tsx
src/components/chat/: ChatInterface.tsx  ChatMessage.tsx  ChatPage.tsx  ChatSettings.tsx  ChatSidebar.tsx  DocumentUpload.tsx  ModelLoader.tsx
src/components/layout/: AppLayout.tsx  GpuBadge.tsx
src/components/settings/: SettingsPage.tsx
src/components/setup/: SetupScreen.tsx
src/contexts/: SidecarContext.tsx  ThemeContext.tsx
src/types/: chat.ts  chat_sessions.ts  library.ts  settings.ts  system.ts  train.ts
src/utils/: native.ts
(+11 files in other folders)
