[package]
name = "tunesalon-desktop"
version = "0.1.1"
description = "TuneSalon Desktop — Local AI Fine-Tuning"
authors = ["TuneSalon"]
edition = "2021"

[lib]
name = "tunesalon_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
